# aerogramme

./: .albatros  .gitattributes  .gitignore  Cargo.nix  Cargo.toml  Makefile  README.md  flake.nix  mailrage.toml  rust-toolchain.toml
aero-bayou/: Cargo.toml
aero-bayou/src/: lib.rs  timestamp.rs
aero-collections/: Cargo.toml  user.rs
aero-collections/mail/: mod.rs  namespace.rs  query.rs  uidindex.rs  unique_ident.rs
aero-collections/src/: davdag.rs  lib.rs  unique_ident.rs  user.rs
aero-collections/src/calendar/: mod.rs  namespace.rs
aero-collections/src/mail/: incoming.rs  mailbox.rs  mod.rs  namespace.rs  query.rs  snapshot.rs  uidindex.rs  unique_ident.rs
aero-dav/: Cargo.toml
aero-dav/fuzz/: Cargo.toml  dav.dict
aero-dav/fuzz/fuzz_targets/: dav.rs
aero-dav/src/: acldecoder.rs  aclencoder.rs  acltypes.rs  caldecoder.rs  calencoder.rs  caltypes.rs  decoder.rs  encoder.rs  error.rs  lib.rs  realization.rs  syncdecoder.rs  syncencoder.rs  synctypes.rs  types.rs  versioningdecoder.rs  versioningencoder.rs  versioningtypes.rs  xml.rs
aero-ical/: Cargo.toml
aero-ical/src/: lib.rs  parser.rs  prune.rs  query.rs
aero-proto/: Cargo.toml  dav.rs  sasl.rs
aero-proto/imap/: attributes.rs  flow.rs  response.rs  search.rs
aero-proto/imap/command/: anonymous.rs  authenticated.rs  mod.rs
aero-proto/src/: dav.rs  lib.rs  lmtp.rs  sasl.rs
aero-proto/src/dav/: codec.rs  controller.rs  middleware.rs  mod.rs  node.rs  resource.rs
aero-proto/src/imap/: flags.rs  flow.rs  index.rs  mail_view.rs  mailbox_view.rs  mime_view.rs  mod.rs  request.rs  search.rs  session.rs
aero-proto/src/imap/command/: anonymous.rs  authenticated.rs  mod.rs  selected.rs
aero-sasl/: Cargo.toml
aero-sasl/src/: decode.rs  encode.rs  flow.rs  lib.rs  types.rs
aero-user/: Cargo.toml
aero-user/src/: config.rs  cryptoblob.rs  lib.rs
aero-user/src/login/: demo_provider.rs  ldap_provider.rs  mod.rs  static_provider.rs
aero-user/src/storage/: garage.rs  in_memory.rs  mod.rs
aerogramme/: Cargo.toml
aerogramme/src/: k2v_util.rs  lib.rs  main.rs  server.rs
aerogramme/tests/: behavior.rs
aerogramme/tests/common/: constants.rs  mod.rs
doc/: book.toml
doc/src/: SUMMARY.md  config.md  crypt-key.md  data_format.md  imap_uid.md  index.md  installation.md  log.md  mailbox.md  notes.md  overview.md  rfc.md  setup.md  validate.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: dav.rs
src/: .server.rs.swo  .service.rs.swo  .session.rs.swo  auth.rs  bayou.rs  command.rs  config.rs  connection.rs  cryptoblob.rs  future_rest_admin_api.txt  instance.rs  k2v_util.rs  lmtp.rs  mail_parser_tests.rs  mail_uuid.rs  mailbox.rs  mailstore.rs  main.rs  server.rs  service.rs  session.rs  test.rs  time.rs  timestamp.rs  uidindex.rs
src/dav/: caldecoder.rs  calencoder.rs  caltypes.rs  decoder.rs  encoder.rs  error.rs  mod.rs  realization.rs  types.rs  versioningtypes.rs  xml.rs
src/imap/: attributes.rs  capability.rs  command.rs  flow.rs  imf_view.rs  index.rs  mail_view.rs  mailbox_view.rs  mime_view.rs  mod.rs  request.rs  response.rs  search.rs  selectors.rs  session.rs
src/imap/command/: anonymous.rs  anystate.rs  authenticated.rs  examined.rs  mod.rs  selected.rs
src/login/: demo_provider.rs  ldap_provider.rs  mod.rs  static_provider.rs
src/mail/: incoming.rs  mail_ident.rs  mailbox.rs  mod.rs  query.rs  snapshot.rs  uidindex.rs  unique_ident.rs  user.rs
src/storage/: garage.rs  in_memory.rs  mod.rs
tests/: README.md  behavior.rs  common.rs  imap_features.rs  inject_emails.sh  rfc3501_imap4rev1_base.rs  rfc3691_imapext_unselect.rs  rfc6851_imapext_move.rs  send-to-imap.py  unix2dos.py
tests/common/: fragments.rs  mod.rs
tests/docker/cyrus/: Dockerfile
tests/docker/maddy/: entrypoint.sh
tests/emails/: .gitignore  COPYING  aero100.mbox.zstd  imap_commands_summary.csv  mailbox_email_sizes.csv  report.R
tests/emails/dxflrs/: 0001_simple.cyrus.body  0001_simple.cyrus.bodystructure  0001_simple.dovecot.bodystructure  0001_simple.eml  0001_simple.maddy.body  0001_simple.maddy.bodystructure  0001_simple.stalwart.0.2.0.body  0001_simple.stalwart.0.2.0.bodystructure  0002_mime.body  0002_mime.bodystructure  0002_mime.cyrus.body  0002_mime.cyrus.bodystructure  0002_mime.dovecot.body  0002_mime.dovecot.bodystructure  0002_mime.eml  0002_mime.maddy.body  0002_mime.maddy.bodystructure  0002_mime.stalwart.0.2.0.body  0002_mime.stalwart.0.2.0.bodystructure  0003_mime-in-mime.body  0003_mime-in-mime.bodystructure  0003_mime-in-mime.cyrus.body  0003_mime-in-mime.cyrus.bodystructure  0003_mime-in-mime.dovecot.body  0003_mime-in-mime.dovecot.bodystructure  0003_mime-in-mime.eml  0003_mime-in-mime.maddy.body  0003_mime-in-mime.maddy.bodystructure  0003_mime-in-mime.stalwart.0.2.0.body  0003_mime-in-mime.stalwart.0.2.0.bodystructure  0004_msg-in-msg.body  0004_msg-in-msg.bodystructure  0004_msg-in-msg.cyrus.body  0004_msg-in-msg.cyrus.bodystructure  0004_msg-in-msg.dovecot.body  0004_msg-in-msg.dovecot.bodystructure  0004_msg-in-msg.eml  0004_msg-in-msg.maddy.body  0004_msg-in-msg.maddy.bodystructure  0004_msg-in-msg.stalwart.0.2.0.body  (+27 more)
tests/emails/legacy/: 000.body  000.cyrus.body  000.cyrus.bodystructure  000.dovecot.bodystructure  000.eml  000.stalwart.0.2.0.bodystructure  001.body  001.bodystructure  001.cyrus.body  001.cyrus.bodystructure  001.eml  001.stalwart.0.2.0.bodystructure  002.cyrus.body  002.cyrus.bodystructure  002.dovecot.body  002.eml  002.maddy.bodystructure  002.stalwart.0.2.0.bodystructure  003.cyrus.body  003.cyrus.bodystructure  003.dovecot.body  003.dovecot.bodystructure  003.eml  003.maddy.body  003.maddy.bodystructure  003.stalwart.0.2.0.bodystructure  004.bodystructure  004.cyrus.body  004.cyrus.bodystructure  004.eml  004.maddy.body  004.maddy.bodystructure  004.stalwart.0.2.0.body  004.stalwart.0.2.0.bodystructure  005.cyrus.body  005.cyrus.bodystructure  005.dovecot.bodystructure  005.eml  (+362 more)
tests/instrumentation/: docker-compose.yml  mbox-to-imap.py  rm-mail-parser-expected-struct.py  send-to-imap.py
tests/parsing-crates/: Cargo.toml  mail_parser.rs  main.rs
(+128 files in other folders)
